--- a/app/chat/templates/chat.html
+++ b/app/chat/templates/chat.html
@@ -75,5 +75,5 @@
 {% block script %}
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-    <script src="{{ url_for('chat.static', filename='scripts/chat.js') }}"></script>
+    <script type = "module" src="{{ url_for('chat.static', filename='scripts/logic.js') }}"> </script>
 {% endblock %}
