--- a/app/auth/static/css/signin.css
+++ b/app/auth/static/css/signin.css
@@ -65,7 +65,6 @@ label {
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 15px;
-  border-radius: 6px;
   /* margin-bottom đã được bỏ khỏi đây */
   transition: 0.2s;
 }
@@ -124,13 +123,7 @@ label {
   margin-left: 0.75em;
 }
 
-.divider:not(:empty)::before {
-  margin-right: 0.75em;
-}
-.divider:not(:empty)::after {
-  margin-left: 0.75em;
-}
-z .oauth-btn {
+.oauth-btn {
   width: 100%;
   display: flex;
   align-items: center;
